--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/ProductoTipo/Anular.cshtml
@@ -48,6 +48,31 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-2">
+                <div class="checkbox">
+                    <label for="Aparece_modu_Activo_F">@Html.CheckBoxFor(q => q.Aparece_modu_Activo_F) Aparece módulo activo</label>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="checkbox">
+                    <label for="Aparece_modu_Compras">@Html.CheckBoxFor(q => q.Aparece_modu_Compras) Aparece módulo compras</label>
+                </div>
+            </div>
+
+            <div class="col-md-2">
+                <div class="checkbox">
+                    <label for="Aparece_modu_Inventario">@Html.CheckBoxFor(q => q.Aparece_modu_Inventario) Aparece módulo inventario</label>
+                </div>
+            </div>
+            <div class="col-md-2">
+                <div class="checkbox">
+                    <label for="Aparece_modu_Ventas">@Html.CheckBoxFor(q => q.Aparece_modu_Ventas) Aparece módulo ventas</label>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <div class="box-footer">
         <button type="submit" class="btn btn-danger">Anular</button>
