--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/_GridViewPartial_cliente_contacto.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Cliente/_GridViewPartial_cliente_contacto.cshtml
@@ -88,7 +88,7 @@
         settings.Columns.Add(column =>
         {
             column.Name = "IdParroquia";
-            column.FieldName = "IdParroquia";
+            column.FieldName = "nom_parroquia";
             column.Caption = "Parroquia*";
             column.Width = Unit.Percentage(20);
             column.EditorProperties().ComboBox(p =>
