--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/PuntoVenta/Nuevo.cshtml
@@ -11,7 +11,7 @@
 @using (Html.BeginForm("Nuevo", "PuntoVenta", FormMethod.Post, new { @class = "form", @rolw = "form" }))
 {
 
-    @Html.HiddenFor(q => q.IdEmpresa
+    @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdPuntoVta)
     <div class="row">
         <div class="col-md-12">
