--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_CmbProducto_Inventario.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/InventarioReportes/_CmbProducto_Inventario.cshtml
@@ -10,13 +10,13 @@
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pr_descripcion";
-        settings.Properties.TextFormatString = "[{1}] {2}";
+        settings.Properties.TextFormatString = "[{0}] {2}";
         settings.Properties.ValueField = "IdProducto";
         settings.Properties.ValueType = typeof(decimal);
 
-        settings.Properties.Columns.Add("IdProducto", "ID", 10);
-        settings.Properties.Columns.Add("pr_codigo", "Código", 10);
-        settings.Properties.Columns.Add("pr_descripcion", "Producto", 80);
+        settings.Properties.Columns.Add("IdProducto", "ID", 5);
+        settings.Properties.Columns.Add("pr_descripcion", "Producto", 65);
+        settings.Properties.Columns.Add("nom_presentacion", "Presentación", 15);
 
     })
     .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.InventarioReportesController().get_list_bajo_demanda,
