--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoFacturacion/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/CatalogoFacturacion/Modificar.cshtml
@@ -44,7 +44,7 @@
             <div class="col-md-3">
                 <div class="form-group">
                     <label for="IdCatalogo">Código*</label>
-                    @Html.TextBoxFor(q => q.IdCatalogo, new { @class = "form-control" })
+                    @Html.TextBoxFor(q => q.IdCatalogo, new { @class = "form-control", @readonly = "readonly" })
                     @Html.ValidationMessageFor(m => m.IdCatalogo, "", new { @class = "text-danger" })
                 </div>
             </div>
