--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index2.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Deudas/Index2.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @{
-    ViewBag.Title = "Documentos sin reención";
+    ViewBag.Title = "Documentos sin retención";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
