--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/_GridViewPartial_pago_dist.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/TerminoPago/_GridViewPartial_pago_dist.cshtml
@@ -51,6 +51,8 @@
             column.Width = Unit.Percentage(50);
             column.ColumnType = MVCxGridViewColumnType.TextBox;
         });
+        //settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Por_distribucion").DisplayFormat = "{0:n2}";
+        //settings.Settings.ShowFooter = true;
     });
 }
 @grid.Bind(Model.Lst_fa_TerminoPago_Distribucion).GetHtml()
