--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Nuevo.cshtml
@@ -57,6 +57,7 @@
 @using (Html.BeginForm("Nuevo", "GuiaRemision", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa)
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     if (ViewBag.mensaje != null)
     {
@@ -161,154 +162,154 @@
         </div>
     </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-8">
-                    <div class="form-group">
-                        <label for="pf_observacion">Direcion origen</label>
-                        @Html.TextBoxFor(q => q.Direccion_Origen, new { @class = "form-control", @id = "Direccion_Origen" })
-                        @Html.ValidationMessageFor(q => q.Direccion_Origen, "", new { @class = "text-danger" })
-                    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="pf_observacion">Direcion origen</label>
+                    @Html.TextBoxFor(q => q.Direccion_Origen, new { @class = "form-control", @id = "Direccion_Origen" })
+                    @Html.ValidationMessageFor(q => q.Direccion_Origen, "", new { @class = "text-danger" })
                 </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="">Inicio traslado</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.TextBoxFor(q => q.gi_FechaInicioTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaInicioTraslado" })
-                            @Html.ValidationMessageFor(q => q.gi_FechaInicioTraslado, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="">Inicio traslado</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
                         </div>
+                        @Html.TextBoxFor(q => q.gi_FechaInicioTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaInicioTraslado" })
+                        @Html.ValidationMessageFor(q => q.gi_FechaInicioTraslado, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-8">
-                    <div class="form-group">
-                        <label for="pf_observacion">Direcion destino</label>
-                        @Html.TextBoxFor(q => q.Direccion_Destino, new { @class = "form-control", @id = "Direccion_Destino" })
-                        @Html.ValidationMessageFor(q => q.Direccion_Destino, "", new { @class = "text-danger" })
-                    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="pf_observacion">Direcion destino</label>
+                    @Html.TextBoxFor(q => q.Direccion_Destino, new { @class = "form-control", @id = "Direccion_Destino" })
+                    @Html.ValidationMessageFor(q => q.Direccion_Destino, "", new { @class = "text-danger" })
                 </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="">Fin traslado</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.TextBoxFor(q => q.gi_FechaFinTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaFinTraslado" })
-                            @Html.ValidationMessageFor(q => q.gi_FechaFinTraslado, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="">Fin traslado</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
                         </div>
+                        @Html.TextBoxFor(q => q.gi_FechaFinTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaFinTraslado" })
+                        @Html.ValidationMessageFor(q => q.gi_FechaFinTraslado, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-5">
-                    <div class="form-group">
-                        <label for="IdClienteContacto">Tipo de traslado</label>
-                        @Html.DropDownListFor(q => q.IdCatalogo_traslado, new SelectList(ViewBag.lst_tipo_traslado, "IdCatalogo", "Nombre"), new { @class = "form-control", @id = "IdContacto" })
-                        @Html.ValidationMessageFor(q => q.IdCatalogo_traslado, "", new { @class = "text-danger" })
-                    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-5">
+                <div class="form-group">
+                    <label for="IdClienteContacto">Tipo de traslado</label>
+                    @Html.DropDownListFor(q => q.IdCatalogo_traslado, new SelectList(ViewBag.lst_tipo_traslado, "IdCatalogo", "Nombre"), new { @class = "form-control", @id = "IdContacto" })
+                    @Html.ValidationMessageFor(q => q.IdCatalogo_traslado, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-        <div class="row">
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-12">
+                <div class="form-group">
+                    <label for="pf_observacion">Observación</label>
+                    @Html.TextAreaFor(q => q.gi_Observacion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.gi_Observacion, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <div id="Tabs" role="tabpanel">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="active">
+                <a href="#detalle_guia" aria-controls="informacion_general" role="tab" data-toggle="tab">Detalle guia</a>
+            </li>
+            <li>
+                <a href="#tab_documentos_relacionados" aria-controls="contactos_telefonos" role="tab" data-toggle="tab">Documentos relacionados</a>
+            </li>
+
+        </ul>
+        <div class="tab-content" style="padding-top: 20px">
+            <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="detalle_guia">
                 <div class="col-md-12">
-                    <div class="form-group">
-                        <label for="pf_observacion">Observación</label>
-                        @Html.TextAreaFor(q => q.gi_Observacion, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.gi_Observacion, "", new { @class = "text-danger" })
+                    <div class="col-md-12">
+                        <button type="button" class="btn btn-primary" onclick="MostrarModal()">
+                            <i class="fa fa-search"></i>
+                        </button>
                     </div>
                 </div>
-            </div>
-        </div>
-       
-    
-
-
-
-        <div id="Tabs" role="tabpanel">
-            <ul class="nav nav-tabs" role="tablist">
-                <li class="active">
-                    <a href="#detalle_guia" aria-controls="informacion_general" role="tab" data-toggle="tab">Detalle guia</a>
-                </li>
-                <li>
-                    <a href="#tab_documentos_relacionados" aria-controls="contactos_telefonos" role="tab" data-toggle="tab">Documentos relacionados</a>
-                </li>
-
-            </ul>
-            <div class="tab-content" style="padding-top: 20px">
-                <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="detalle_guia">
+                <div class="row">
                     <div class="col-md-12">
                         <div class="col-md-12">
-                            <button type="button" class="btn btn-primary" onclick="MostrarModal()">
-                                <i class="fa fa-search"></i>
-                            </button>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    @Html.Action("GridViewPartial_guias_remision_det")
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                </div>
-                <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_documentos_relacionados">
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="col-md-12">
-                                <div class="form-group">
-                                    @Html.Action("GridViewPartial_Facturas_x_guia")
-                                </div>
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_guias_remision_det")
                             </div>
                         </div>
                     </div>
                 </div>
 
             </div>
-        </div>
-
-
-
-                <div class="modal fade" id="OpModal" role="dialog">
-                    <div class="modal-dialog modal-lg">
-                        <!-- Modal content-->
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                                <h4 class="modal-title">Facturas sin guias</h4>
-                            </div>
-                            <div class="modal-body">
-                                @Html.Action("GridViewPartial_FacturasSinGuia")
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-primary" onclick="seleccionar_aprobacion();">Aceptar</button>
-                                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_documentos_relacionados">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_Facturas_x_guia")
                             </div>
                         </div>
-
                     </div>
                 </div>
+            </div>
+
+        </div>
+    </div>
 
 
-                <div class="box-footer">
-                    <button type="submit" class="btn btn-primary">Guardar</button>
-                    <a class="btn btn-default" href="@Url.Action("Index","GuiaRemision",new { Area = "Facturacion" },null)">Cancelar</a>
+
+    <div class="modal fade" id="OpModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Facturas sin guias</h4>
                 </div>
-                @section Scripts {
-                    @Scripts.Render("~/bundles/jqueryval")
-                }
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_FacturasSinGuia")
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" onclick="seleccionar_aprobacion();">Aceptar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="box-footer">
+        <button type="submit" class="btn btn-primary">Guardar</button>
+        <a class="btn btn-default" href="@Url.Action("Index","GuiaRemision",new { Area = "Facturacion" },null)">Cancelar</a>
+    </div>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
 
 
