--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/Anular.cshtml
@@ -56,6 +56,7 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdGuiaRemision)
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     if (ViewBag.mensaje != null)
     {
@@ -152,108 +153,108 @@
         </div>
     </div>
 
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-8">
-                    <div class="form-group">
-                        <label for="pf_observacion">Direcion origen</label>
-                        @Html.TextBoxFor(q => q.Direccion_Origen, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.Direccion_Origen, "", new { @class = "text-danger" })
-                    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="pf_observacion">Direcion origen</label>
+                    @Html.TextBoxFor(q => q.Direccion_Origen, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Direccion_Origen, "", new { @class = "text-danger" })
                 </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="">Inicio traslado</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.TextBoxFor(q => q.gi_FechaInicioTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaInicioTraslado" })
-                            @Html.ValidationMessageFor(q => q.gi_FechaInicioTraslado, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="">Inicio traslado</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
                         </div>
+                        @Html.TextBoxFor(q => q.gi_FechaInicioTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaInicioTraslado" })
+                        @Html.ValidationMessageFor(q => q.gi_FechaInicioTraslado, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-8">
-                    <div class="form-group">
-                        <label for="pf_observacion">Direcion destino</label>
-                        @Html.TextBoxFor(q => q.Direccion_Destino, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.Direccion_Destino, "", new { @class = "text-danger" })
-                    </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-8">
+                <div class="form-group">
+                    <label for="pf_observacion">Direcion destino</label>
+                    @Html.TextBoxFor(q => q.Direccion_Destino, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Direccion_Destino, "", new { @class = "text-danger" })
                 </div>
-                <div class="col-md-2">
-                    <div class="form-group">
-                        <label for="">Fin traslado</label>
-                        <div class="input-group date">
-                            <div class="input-group-addon">
-                                <i class="fa fa-calendar"></i>
-                            </div>
-                            @Html.TextBoxFor(q => q.gi_FechaFinTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaFinTraslado" })
-                            @Html.ValidationMessageFor(q => q.gi_FechaFinTraslado, "", new { @class = "text-danger" })
+            </div>
+            <div class="col-md-2">
+                <div class="form-group">
+                    <label for="">Fin traslado</label>
+                    <div class="input-group date">
+                        <div class="input-group-addon">
+                            <i class="fa fa-calendar"></i>
                         </div>
+                        @Html.TextBoxFor(q => q.gi_FechaFinTraslado, "{0:dd/MM/yyyy}", new { @class = "form-control", @id = "gi_FechaFinTraslado" })
+                        @Html.ValidationMessageFor(q => q.gi_FechaFinTraslado, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
         </div>
-        <div class="row">
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-12">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <label for="pf_observacion">Observación</label>
-                        @Html.TextAreaFor(q => q.gi_Observacion, new { @class = "form-control" })
-                        @Html.ValidationMessageFor(q => q.gi_Observacion, "", new { @class = "text-danger" })
-                    </div>
+                <div class="form-group">
+                    <label for="pf_observacion">Observación</label>
+                    @Html.TextAreaFor(q => q.gi_Observacion, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.gi_Observacion, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
-        <div class="row">
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <button type="button" class="btn btn-primary" onclick="MostrarModal()">
+                <i class="fa fa-search"></i>
+            </button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
             <div class="col-md-12">
-                <button type="button" class="btn btn-primary" onclick="MostrarModal()">
-                    <i class="fa fa-search"></i>
-                </button>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-12">
-                    <div class="form-group">
-                        <label for="pf_observacion">Detalle</label>
-                        @Html.Action("GridViewPartial_guias_remision_det")
-                    </div>
+                <div class="form-group">
+                    <label for="pf_observacion">Detalle</label>
+                    @Html.Action("GridViewPartial_guias_remision_det")
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="modal fade" id="OpModal" role="dialog">
-            <div class="modal-dialog modal-lg">
-                <!-- Modal content-->
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h4 class="modal-title">Facturas sin guias</h4>
-                    </div>
-                    <div class="modal-body">
-                        @Html.Action("GridViewPartial_FacturasSinGuia")
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
-                    </div>
+    <div class="modal fade" id="OpModal" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Facturas sin guias</h4>
                 </div>
-
+                <div class="modal-body">
+                    @Html.Action("GridViewPartial_FacturasSinGuia")
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
+                </div>
             </div>
+
         </div>
+    </div>
 
 
-        <div class="box-footer">
-            <button type="submit" class="btn btn-danger">Anular</button>
-            <a class="btn btn-default" href="@Url.Action("Index","GuiaRemision",new { Area = "Facturacion" },null)">Cancelar</a>
-        </div>
-        @section Scripts {
-            @Scripts.Render("~/bundles/jqueryval")
-        }
+    <div class="box-footer">
+        <button type="submit" class="btn btn-danger">Anular</button>
+        <a class="btn btn-default" href="@Url.Action("Index","GuiaRemision",new { Area = "Facturacion" },null)">Cancelar</a>
+    </div>
+    @section Scripts {
+        @Scripts.Render("~/bundles/jqueryval")
+    }
 }
 
 
