--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision_det.cshtml
@@ -57,6 +57,7 @@
 
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "gi_cantidad").DisplayFormat = "{0:n2}";
         settings.Settings.ShowFooter = true;
+        settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
     });
 }
 @grid.Bind(Model).GetHtml()
