--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Proforma/Nuevo.cshtml
@@ -11,6 +11,7 @@
 {
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdProforma)
+    @Html.HiddenFor(q => q.IdTransaccionSession, new { @id = "IdTransaccionSession" })
 
     <div class="modal fade" id="OpModal" role="dialog">
         <div class="modal-dialog modal-lg">
@@ -168,6 +169,7 @@
     function MostrarModal() {
         GridView_LoteProforma.PerformCallback();
         $("#OpModal").modal("show");
+        IdTransaccionSession: $("#IdTransaccionSession").val();
     }
 
     function SetLoteDetalle(ID) {
